force-app/main/default/objects/Pdf_Header__mdt/Pdf_Header__mdt.object-meta.xml
<CustomObject>
    <label>Pdf Header</label>
    <pluralLabel>Pdf Headers</pluralLabel>
</CustomObject>