force-app/main/default/objects/Pdf_Header__mdt/fields/Address_Header__c.field-meta.xml
<CustomField>
    <fullName>Address_Header__c</fullName>
    <label>Address Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>