force-app/main/default/objects/Pdf_Header__mdt/fields/BANK__c.field-meta.xml
<CustomField>
    <fullName>BANK__c</fullName>
    <label>BANK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>