force-app/main/default/objects/Pdf_Header__mdt/fields/Bank_A_C_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_A_C_No__c</fullName>
    <label>Bank A/C No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>