force-app/main/default/objects/Pdf_Header__mdt/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kolkata</fullName>
                <default>true</default>
                <label>Kolkata</label>
            </value>
            <value>
                <fullName>Gurugram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>