force-app/main/default/objects/Pdf_Header__mdt/fields/IEC_No__c.field-meta.xml
<CustomField>
    <fullName>IEC_No__c</fullName>
    <label>IEC No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>