force-app/main/default/objects/Pdf_Header__mdt/fields/IFC_RTGS_NEFT__c.field-meta.xml
<CustomField>
    <fullName>IFC_RTGS_NEFT__c</fullName>
    <label>IFC/RTGS/NEFT.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>