force-app/main/default/objects/Pdf_Header__mdt/fields/PAN_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_No__c</fullName>
    <label>PAN No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>