force-app/main/default/objects/Pdf_Header__mdt/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <label>Tel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>